# git-acm

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  cargo-readme.md  changelog.md  cooking-process.md  install.ps1  install.sh  readme.md  temp.md
.github/workflows/: build.yml  ci-cd.yml  release.yml
assets/: models.json  prompt.txt
docs/: index.html
src/: diff.rs  main.rs  prompt.txt
src/models/: anthropic.rs  deepseek.rs  gemini.rs  llama.rs  mod.rs  openai.rs
src/utils/: checks.rs  config.rs  diff.rs  mod.rs  openrouter.rs
