[package]
name = "git-acm"
description = "instant meaningful commit messages."
version = "1.3.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://git-acm.pages.dev"
repository = "https://github.com/shivamhwp/git-acm"
readme = "cargo-readme.md"
exclude = ["docs"]


[dependencies]
isahc = {version = "1.7.2", features = ["json"]}
duct = "0.13.7"
dotenvy = "0.15.7"
clap = "4.5.23"
yansi = "1.0.1"
serde_json = "1.0.135"
arboard = "3.4.1"
crossterm = "0.28.1"
serde = { version = "1.0.215", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
