[package]
name = "git-acm"
description = "instant meaningful commit messages."
version = "2.0.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://git-acm.pages.dev"
repository = "https://github.com/shivamhwp/git-acm"
readme = "cargo-readme.md"
exclude = ["docs"]


[dependencies]
openrouter-rs = "0.4.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
duct = "0.13.7"
dotenvy = "0.15.7"
clap = "4.5.23"
yansi = "1.0.1"
arboard = "3.4.1"
crossterm = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"

[profile.release]
codegen-units = 1
lto = true
